k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: country-info
  labels:
    app.kubernetes.io/name: country-info-service
    app.kubernetes.io/part-of: ncba-platform
