k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: country-info-service
  namespace: country-info
  labels:
    app.kubernetes.io/name: country-info-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: country-info-service
